deixando dinamico o base.html

--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -18,6 +18,7 @@
             <a href="{% url 'pessoa.index' %}">Pessoas </a>
         </li>
     </ul>
+    {% block  content %} {% endblock %}
     
 </body>
 </html>
