criando formulario de pessoas

--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -18,7 +18,9 @@
             <a href="{% url 'pessoa.index' %}">Pessoas </a>
         </li>
     </ul>
-    {% block  content %} {% endblock %}
+    {% block  content %} 
+    
+    {% endblock %}
     
 </body>
 </html>
