--- a/pessoa/templates/pessoa/pessoa_form.html
+++ b/pessoa/templates/pessoa/pessoa_form.html
@@ -6,7 +6,7 @@
     {% csrf_token %}
 
     {{ form.as_p }}
-    <button type="submit"> Salvar </button>
+    <input type="submit" value="Salvar">
 
 </form>
 
