--- a/pessoa/templates/contato/contato_list.html
+++ b/pessoa/templates/contato/contato_list.html
@@ -7,6 +7,7 @@
         <input type="submit" value="Buscar" />
     </form>
 
+    <a href="{% url 'contato.novo' pk_pessoa %}">Novo</a>
     <table>
         <thead>
             <tr>
@@ -22,6 +23,12 @@
                     <td>{{ contato.nome }}</td>
                     <td>{{ contato.email }}</td>
                     <td>{{ contato.telefone }}</td>
+                    <td> 
+                        <a href="{% url 'contato.editar' pk_pessoa contato.pk %}"> Editar </a>
+                        <a href="{% url 'contato.remover' pk_pessoa contato.pk %}"> Remover </a>
+
+                    </td>
+
                 </tr>
             {% endfor %}
         
